--- a/catalog.html
+++ b/catalog.html
@@ -179,6 +179,7 @@
 					<a class="catalog__item-btn btn btn-red btn-hidden btn-white-text" href="fast-view.html">Быстрый просмотр</a>
 				</li>
 			</ul>	
+		</section>
 
 			<ul class="pagination">
 				<li class="pagination-item"><a class="pagination-link inline-link link-disabled">&#8249;</a></li>
